# mongo_seeder

./: Cargo.toml  README.md  config.json
.github/workflow/: rust.yml
src/: error.rs  generate_data.rs  insert.rs  main.rs  read_config.rs  types.rs
