[package]
name = "mongo_seeder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
fake = { version = "2.10.0", features = ["derive", "chrono"] }
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
